Fix header z-index

--- a/assets/styles/components/header.scss
+++ b/assets/styles/components/header.scss
@@ -2,7 +2,7 @@
     position: fixed;
     left: 0px;
     top: 0px;
-    z-index: 3;
+    z-index: 6;
     width: 100%;
     padding: 1.5rem 0px;
     background: $header-background-color;
